# tarash

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMAGE_GATEWAY_DESIGN_PLAN.md  PLAN.md  README.md  create-packages.sh  pyproject.toml  zensical.toml
.claude/: settings.local.json
.claude/skills/add-fal-model/: SKILL.md
.github/ISSUE_TEMPLATE/: add-fal-model.yml
.github/workflows/: add-fal-model.yml  deploy-docs.yml  e2e-tests.yml  unit-tests.yml
docs/: CNAME  index.md
docs/api-reference/: exceptions.md  gateway.md  mock.md  models.md
docs/getting-started/: authentication.md  installation.md  quickstart.md
docs/guides/: custom-providers.md  fallback-and-routing.md  image-generation.md  image-to-video.md  mock.md  video-generation.md
docs/plans/: 2026-02-24-docs-overhaul-design.md  2026-02-24-docs-overhaul.md  2026-02-24-tarash-gateway-blog-design.md  2026-02-24-tarash-gateway-blog.md
docs/providers/: azure-openai.md  fal.md  google.md  index.md  luma.md  openai.md  replicate.md  runway.md  stability.md
docs/providers/fal/: grok-imagine-image.md  index.md  kling.md  minimax.md  pixverse.md  seedance.md  sora.md  veo.md  wan.md
docs/stylesheets/: extra.css
src/tarash/: __init__.py
