[project]
name = "tarash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ritesh Kadmawala", email = "ritesh@vertexcover.io" }
]
requires-python = ">=3.12"
dependencies = [
    "tarash-gateway[all]",
]

[tool.uv.sources]
tarash-gateway = { workspace = true }

[project.scripts]
tarash = "tarash.cli.cli:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tarash.cli"

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
