[project]
name = "tarash"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ritesh Kadmawala", email = "ritesh@vertexcover.io" }
]
requires-python = ">=3.12"
dependencies = [
    "tarash-gateway[all]",
    "tarash-captions[all]",
]

[tool.uv.sources]
tarash-scene-detector = { workspace = true }
tarash-gateway = { workspace = true }
tarash-captions = { workspace = true }

[project.scripts]
tarash = "tarash.cli.cli:main"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/tarash"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]
